--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
     "@sanity/block-content-to-react": "^2.0.7",
@@ -12,12 +13,19 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "alpinejs": "^2.8.2",
+    "emailjs": "^3.5.0",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^4.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-social-icons": "^5.3.0",
+    "react-tinder-card": "^1.4.0",
+    "react-typed": "^1.2.0",
     "tailwindcss": "^2.1.2",
+    "tsparticles": "^1.34.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
